--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ permissions:
 jobs:
   build:
     env:
-      PUBLIC_SITE_URL: ${{ secrets.PUBLIC_SITE_URL }}
-      BASE: ${{ secrets.BASE }}
+      VITE_PUBLIC_SITE_URL: ${{ secrets.VITE_PUBLIC_SITE_URL }}
+      VITE_BASE: ${{ secrets.VITE_BASE }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repository using git
