--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ permissions:
   id-token: write
 
 env:
-  VITE_PUBLIC_SITE_URL: ${{ vars.VITE_PUBLIC_SITE_URL }}
-  VITE_BASE: ${{ vars.VITE_BASE }}
+  VITE_PUBLIC_SITE_URL: "https://robpickard-93.github.io"
+  VITE_BASE: "game-dev-blog"
 
 jobs:
   build:
